# OpenAI-Python-Client

./: LICENSE  README.md  chatbot.py  client.py  setup.cfg  setup.py
.github/workflows/: release-on-main-merge.yaml  run-unittests.yaml
.github/workflows/scripts/: release.py
client/: __init__.py  main.py
clients/: __init__.py
clients/chatbot/: client.py
mixins/: __init__.py  context_manager.py
src/: __init__.py
src/base/: __init__.py
src/clients/chatbot/: __init__.py
src/enums/: base.py
src/openai_client/: __init__.py
src/openai_client/base/: __init__.py  client.py  image_client.py
src/openai_client/clients/: __init__.py
src/openai_client/clients/chatbot/: client.py  d_and_d_demo.py
src/openai_client/clients/completion/: __init__.py  client.py
src/openai_client/clients/image_generation/: __init__.py  url_image_gen_demo.py
src/openai_client/clients/image_generation/clients/: __init__.py  create_image.py
src/openai_client/clients/images/: __init__.py
src/openai_client/clients/images/clients/: __init__.py  create_image.py  edit_image.py  image_variation.py
src/openai_client/enums/: __init__.py  base.py  image_response_formats.py  image_sizes.py  models.py  roles.py
src/openai_client/mixins/: __init__.py  chat_context_manager.py  example_context_manager.py  image_context_manager.py
tests/: test_demo.py
