[metadata]
name = OpenAI API Python Client
maintainer = Peter Swanson
description = A base client for interacting with the OpenAI API and custom clients/mixins to make developing things like chatbots super quick!
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Topazoo/OpenAI-Python-Client
project_urls =
    Bug Tracker = https://github.com/Topazoo/OpenAI-Python-Client/issues
    Changelog = https://github.com/Topazoo/OpenAI-Python-Client/releases
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Intended Audience :: Developers

[options]
test_suite = tests

install_requires =
    openai >= 0.27.0
    
package_dir =
    = src
packages = find:

[options.packages.find]
where = src
